# pytest-paraflow

./: CHANGELOG.md  README.md  pyproject.toml
docs/: PUBLISHING.md
examples/: paraflow-matrix-allure-testops-example.yml  paraflow-matrix-example.yml
scripts/: rename_template.py
src/pytest_paraflow/: __init__.py
src/pytest_paraflow/config/: __init__.py  settings.py
src/pytest_paraflow/domains/: __init__.py
src/pytest_paraflow/domains/distribution/: __init__.py  exceptions.py  models.py  services.py
src/pytest_paraflow/entry_points/: options.py  plugin.py
src/pytest_paraflow/infrastructure/hash/: __init__.py  hasher.py
src/pytest_paraflow/infrastructure/pytest/: __init__.py  group_key_resolver.py  item_mapper.py
src/python_project_template/config/: settings.py
src/python_project_template/entry_points/: __init__.py
src/python_project_template/infrastructure/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py  test_plugin_integration.py
